Fixed initail alias not being set and overflow styling.

--- a/src/renderer/index.scss
+++ b/src/renderer/index.scss
@@ -82,7 +82,10 @@ body {
 }
 
 .sbt-org-list--item {
-  height: $large;
+  min-height: $large;
+  h4 {
+    word-break: break-all;
+  }
 }
 
 .sbt-collapse-group--header {
